[gd_scene load_steps=9 format=3 uid="uid://dq04ytafp7esq"]

[ext_resource type="Script" path="res://weapons/enemy_weapons/knightslime.gd" id="1_k1hm6"]
[ext_resource type="Texture2D" uid="uid://ckys3wdomg77l" path="res://PNGs/3Weapons/BAL7C0.png" id="2_b0mvv"]
[ext_resource type="Texture2D" uid="uid://c6p7677d01yda" path="res://PNGs/3Weapons/BAL7D0.png" id="3_8yc1h"]
[ext_resource type="Texture2D" uid="uid://bclho3tkgwei2" path="res://PNGs/3Weapons/BAL7E0.png" id="4_indr8"]
[ext_resource type="Texture2D" uid="uid://bnbojrbx601ct" path="res://PNGs/3Weapons/BAL7A2A8.png" id="5_ynpk2"]
[ext_resource type="Texture2D" uid="uid://cetc0q7s0qh5c" path="res://PNGs/3Weapons/BAL7B2B8.png" id="6_a0nu6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dyhud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b0mvv")
}, {
"duration": 1.0,
"texture": ExtResource("3_8yc1h")
}, {
"duration": 1.0,
"texture": ExtResource("4_indr8")
}],
"loop": false,
"name": &"blow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ynpk2")
}, {
"duration": 1.0,
"texture": ExtResource("6_a0nu6")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5n4o3"]
radius = 12.0145
height = 30.0282

[node name="Slmeball" type="Area2D"]
show_behind_parent = true
top_level = true
rotation = -5.95017
collision_mask = 5
script = ExtResource("1_k1hm6")

[node name="AnimatedSlime" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-0.945061, 0.326894)
rotation = 2.85361
scale = Vector2(1.77703, 1.77662)
sprite_frames = SubResource("SpriteFrames_dyhud")
animation = &"move"

[node name="SlimeballCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(12.6127, -3.30456)
rotation = 1.22173
shape = SubResource("CapsuleShape2D_5n4o3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSlime" to="." method="_on_animation_finished"]
